[gd_scene load_steps=4 format=3 uid="uid://cdfmdf2fc6pvw"]

[ext_resource type="Script" uid="uid://dglh0mxnub0ju" path="res://scripts/dice/dice_1/dice_1.gd" id="1_6iavn"]
[ext_resource type="Texture2D" uid="uid://cw4sn06fecmls" path="res://assets/dice/dice_plan.png" id="1_53hfn"]
[ext_resource type="PackedScene" uid="uid://duhvky36wcgju" path="res://scenes/dice/droppable_face.tscn" id="1_87u1t"]

[node name="Dice1" type="Node2D"]
script = ExtResource("1_6iavn")

[node name="DiceBase" type="Sprite2D" parent="."]
texture = ExtResource("1_53hfn")

[node name="DroppableFace1" parent="." instance=ExtResource("1_87u1t")]
position = Vector2(-49, 0)

[node name="DroppableFace2" parent="." instance=ExtResource("1_87u1t")]
position = Vector2(-18, 0)

[node name="DroppableFace3" parent="." instance=ExtResource("1_87u1t")]
position = Vector2(-18, -31)

[node name="DroppableFace4" parent="." instance=ExtResource("1_87u1t")]
position = Vector2(-18, 31)

[node name="DroppableFace5" parent="." instance=ExtResource("1_87u1t")]
position = Vector2(13, 0)

[node name="DroppableFace6" parent="." instance=ExtResource("1_87u1t")]
position = Vector2(44, 0)
